Fix or document v5 transitional warning suppressions in N&O owned code

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • N&O 2025-03-31, N&O 2025-04-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SPM-3825, we suppressed a number of warnings emitted by the new compilers, some of which we did not immediately identify as being required or advisable long-term. Review all instances of MONGO_COMPILER_DIAGNOSTIC_IGNORED_TRANSITIONAL in the files owned by Networking & Observability listed below.

      For each instance, either

      1. fix the code that causes the warning to be emitted and remove the suppression macros, or
      2. create a new macro similar to MONGO_COMPILER_DIAGNOSTIC_WORKAROUND_BOOST_SMALL_VECTOR and rewrite the TRANSITIONAL macro to use the WORKAROUND macro. Document why the suppression needs to remain in the codebase long-term.

      File list:

      src/mongo/logv2/log_capture_backend.h
      

            Assignee:
            David Goffredo
            Reporter:
            James Bronsted
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: