SERVER-102292: label the -Wstringop-overflow atomic store workaround (#34345)

Co-authored-by: David Goffredo <david.goffredo@mongodb.com>
GitOrigin-RevId: 3450d60c7bba5194c80daadd674f805ad99923f2